--- a/workdetails.html
+++ b/workdetails.html
@@ -6,52 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
    <link rel="stylesheet" href="styles.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
 <section>
-    <div class="navbar">
+    <div class="container">
 
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
+    
+    <div class="float-end">
+        <nav class="navbar navbar-expand">
+            <ul class="navbar-nav ">
+                <li><a class="nav-link" href="">Home</a></li>
+                <li><a class="nav-link" href="">Blog</a></li>
+                <li><a class="nav-link" href="">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="workdetails-body">
-        <div class="content-wrapper">
+    <div class="workdetails-body pt-5 d-flex flex-column align-items-center">
+        <div class="content-wrapper text-start my-5">
             <h3>Designing Dashboards with usability in mind</h3>
-            <div>
+            <div class="d-flex">
                 <span>2020</span>
-                <p>Dashboard, User Experience Design</p>
+                <p class="mx-3">Dashboard, User Experience Design</p>
             </div>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-        <img src="images/Rectangle 4@2x.png" alt="">
+            <p class="col-8 my-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        <img class="w-75" src="images/Rectangle 4@2x.png" alt="">
         </div>
         <div class="content-wrapper">
             <h3>Designing Dashboards with usability in mind</h3>
-            <div>
+            <div class="d-flex">
                 <span>2020</span>
-                <p>Dashboard, User Experience Design</p>
+                <p class="mx-3" >Dashboard, User Experience Design</p>
             </div>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="col-8">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         <img src="images/Rectangle 5.png" alt="">
-        <img src="images/Rectangle 6.png" alt="">
+        <img class="my-3" src="images/Rectangle 6.png" alt="">
         </div>
     </div>
+</div>
 </section>
 
-    <footer>
-        <div>
-            <a href=""><img src="images/fb.png" alt=""></a>
-            <a href=""><img src="images/insta.png" alt=""></a>
-            <a href=""><img src="images/Group.png" alt=""></a>
-            <a href=""><img src="images/Linkedin.png" alt=""></a>
-        </div>
-        <div>
-            <p>Copyright ©2020 All rights reserved</p>
-        </div>
-    </footer>
+<footer class="container">
+    <div class="d-flex flex-row justify-content-center align-items-center" >
+     <nav class="navbar navbar-expand-lg">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <a href="" class="nav-link"><img src="images/fb.png" alt=""></a>
+         <a href="" class="nav-link"><img src="images/insta.png" alt=""></a>
+         <a href="" class="nav-link"><img src="images/Group.png" alt=""></a>
+         <a href="" class="nav-link"><img src="images/Linkedin.png" alt=""></a>
+     </ul>
+ </nav>
+    </div>
+    <div class="d-flex flex-row justify-content-center align-items-center">
+        <p>Copyright ©2020 All rights reserved</p>
+    </div>
+</footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </html>
